# python-fantasy

./: .gitignore  README.md  pyproject.toml
fantasy/: download.py  major.py  to_epub.py  to_json.py
