[tool.poetry]
name = "ley"
version = "0.1.0"
description = ""
authors = ["Kris <31852063+krisfris@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
ebooklib = "^0.17.1"
bs4 = "^0.0.1"
requests = "^2.24.0"
eng-to-ipa = "^0.0.2"
langdetect = "^1.0.8"
crayons = "^0.3.1"
spacy = "^2.3.2"
nltk = "^3.5"
textblob = "^0.15.3"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
